--- a/_posts/2018-03-03-Jekyll.md
+++ b/_posts/2018-03-03-Jekyll.md
@@ -4,7 +4,7 @@ title:      Windows 使用 Jekyll 创建 GitHub Pages 个人博客
 subtitle:   零基础免费搭建网站
 date:       2018-03-03
 author:     Allen Vork
-header-img: img/head1.png
+header-img: img/post-bg-swift.png
 catalog: true
 tags:
     - Jekyll
