builder design pattern

--- a/_posts/2018-03-06-builder.md
+++ b/_posts/2018-03-06-builder.md
@@ -13,7 +13,7 @@ tags:
 将复杂对象的构建与表示分离，使得同样的构建过程创造不同的表示。人话：创建一个对象可能需要很多参数，但是并不是每个参数都是必须的，传入不同的参数可以产生不同的结果。
 
 ## UML 图
-![buider uml](img/design-pattern/builder_uml.png)    
+![]({{site.url}}/img/design-pattern/builder_uml.png)    
 即用户使用 Director 来通过 Builder 创建 Product（现在很少有人用 Director 而是直接通过 Builder 来构造）。
 
 ## Builder 模式实例    
