builder design pattern

--- a/_posts/2018-03-06-builder.md
+++ b/_posts/2018-03-06-builder.md
@@ -13,7 +13,7 @@ tags:
 将复杂对象的构建与表示分离，使得同样的构建过程创造不同的表示。人话：创建一个对象可能需要很多参数，但是并不是每个参数都是必须的，传入不同的参数可以产生不同的结果。
 
 ## UML 图
-![buider uml]()    
+![buider uml](img/design-pattern/builder_uml.png)    
 即用户使用 Director 来通过 Builder 创建 Product（现在很少有人用 Director 而是直接通过 Builder 来构造）。
 
 ## Builder 模式实例    
@@ -95,11 +95,146 @@ val house: House = houseBuilder.build();
 ```
 
 我们有一个 House 可以配备卫生间，婴儿房和书房，通过 HouseBuilder 来构建房子，给房子配备任意几种设施，然后通过 HouseDirector 来真正组装一个房子。    
-不知道你们看完后是不是跟我一样的感觉：繁琐。
+不知道你们看完后是不是跟我一样的感觉：繁琐。我们可以简化一下，去掉 Director:
+``` java
+// Product 类
+class House {
+
+    private var washingRoom: Boolean = false
+    private var babyRoom: Boolean = false
+    private var readingRoom: Boolean = false
+
+    fun setWasingRoom(hasWasingRoom: Boolean = true) {
+        washingRoom = hasWasingRoom
+    }
+
+    fun setHasBabyRoom(hasBabyRoom: Boolean = true) {
+        babyRoom = hasBabyRoom
+    }
+
+    fun setHasReadingRoom(hasReadingRoom: Boolean = true) {
+        readingRoom = hasReadingRoom
+    }
+}
+
+//builder 接口
+interface IHouseBuilder {
+
+    fun setHasWasingRoom(hasWashingRoom: Boolean = true)
+
+    fun setHasBabyRoom(hasBabyRoom: Boolean = true)
+
+    fun setHasReadingRoom(hasReadingRoom: Boolean = true)
+
+    fun build() : House
+}
+
+// builder 具体构建类
+class HouseBuilder : IHouseBuilder {
+    private var house = House()
+
+    override fun setHasWasingRoom(hasWashingRoom: Boolean): IHouseBuilder {
+        house.setWasingRoom(hasWashingRoom)
+        return this
+    }
+
+    override fun setHasBabyRoom(hasBabyRoom: Boolean): IHouseBuilder {
+        house.setHasBabyRoom(hasBabyRoom)
+        return this
+    }
+
+    override fun setHasReadingRoom(hasReadingRoom: Boolean): IHouseBuilder {
+        house.setHasBabyRoom(hasReadingRoom)
+        return this
+    }
+
+    override fun build(): House {
+        return house
+    }
+}
+
+//调用    
+val house = HouseBuilder().setHasBabyRoom(true)
+        .setHasReadingRoom(false)
+        .build()
+
+```
+可以看出我们去掉了 Director 并且 Builder 的每个方法都会返回 IBuilder 对象用于链式调用。比第一种看起来舒服很多。下面再看另一种写法：
+
+```java
+//builder 接口
+interface IHouseBuilder {
+
+    fun setHasWasingRoom(hasWashingRoom: Boolean = true): IHouseBuilder
+
+    fun setHasBabyRoom(hasBabyRoom: Boolean = true): IHouseBuilder
+
+    fun setHasReadingRoom(hasReadingRoom: Boolean = true): IHouseBuilder
+
+    fun build() : House
+}
+
+// Product 类
+class House {
+
+    private var washingRoom: Boolean = false
+    private var babyRoom: Boolean = false
+    private var readingRoom: Boolean = false
+
+    // set constructor protected to avoid being abused.
+    protected constructor()
+
+    fun setWasingRoom(hasWasingRoom: Boolean = true) {
+        washingRoom = hasWasingRoom
+    }
+
+    fun setHasBabyRoom(hasBabyRoom: Boolean = true) {
+        babyRoom = hasBabyRoom
+    }
+
+    fun setHasReadingRoom(hasReadingRoom: Boolean = true) {
+        readingRoom = hasReadingRoom
+    }
+
+    // builder 具体构建类
+    class HouseBuilder : IHouseBuilder {
+        private var house = House()
+
+        override fun setHasWasingRoom(hasWashingRoom: Boolean): IHouseBuilder {
+            house.setWasingRoom(hasWashingRoom)
+            return this
+        }
+
+        override fun setHasBabyRoom(hasBabyRoom: Boolean): IHouseBuilder {
+            house.setHasBabyRoom(hasBabyRoom)
+            return this
+        }
+
+        override fun setHasReadingRoom(hasReadingRoom: Boolean): IHouseBuilder {
+            house.setHasBabyRoom(hasReadingRoom)
+            return this
+        }
+
+        override fun build(): House {
+            return house
+        }
+    }
+}
+
+//调用
+val house = House.HouseBuilder().setHasBabyRoom(true)
+        .setHasReadingRoom(false)
+        .build()
+```
+第三种在第二种的基础上，将 Builder 的实现类作为 Product 类的内部类，然后将 Product 的构造函数的作用域降低到 protected。
 
 ## 问题
-> 为什么将 Builder 类作为 Product 类的内部类？        
-
-
+> 为什么将 Builder 类作为 Product 类的内部类？  
+      
 我们知道，java 的内部类的最明显的好处是为 java 的单继承开后门。因为内部类也可以继承其余类，外部类可以将其余的需要继承的类分给自己的内部类，然后持有内部类的对象，这样就相当于间接实现了多继承。但这里凸显了内部类的另外一个好处。想一下，如果我们将 Builder 也作为一个普通的外部类的话，它要构建 Product，那么 Product 必须有 public 的构造函数，这样就可能被不熟悉的同学直接去构造 Product 而没有使用 Builder。把 Builder 类写成 Product 类的静态内部类后，把 Product 类的构造函数写成 protected 就可以解决这个问题。
+
+> 我们可以看到 Builder 类和 Product 类中的函数都一样，我们为什么不直接调用 Product 类而是弄一个 Builder 去构建呢？
+
+Product 类其实是一个很复杂的类，除了有 Builder 中的构建逻辑外，还有很多复杂的业务逻辑。通过 Builder 来构建的话，能将类之间的依赖建立在最小接口上，用户只用关心 Builder 类的几个接口就行了，不用去看 Product 类中复杂的逻辑。
+
 
