Builder pattern on AlertDialog

--- a/_posts/2018-03-06-builder.md
+++ b/_posts/2018-03-06-builder.md
@@ -237,4 +237,50 @@ val house = House.HouseBuilder().setHasBabyRoom(true)
 
 Product 类其实是一个很复杂的类，除了有 Builder 中的构建逻辑外，还有很多复杂的业务逻辑。通过 Builder 来构建的话，能将类之间的依赖建立在最小接口上，用户只用关心 Builder 类的几个接口就行了，不用去看 Product 类中复杂的逻辑。
 
+-----------------
+## 下面我们来看下 Android 源码中 AlertDialog 是如何使用 Builder 模式的
+note:为了方便大家理解，我将源码简化了一下：
+```java
+class AlertDialog {
+    val alertController: AlertController;
+
+    protected constructor() {
+        this.alertController = AlertController(getContext(), this, getWindow())
+    }
+
+    fun setView(view: View) {
+        alertController.setView(view)
+    }
+
+    protected fun onCreate(savedInstanceState: Bundle) {
+        alertController.installContent()
+    }
+
+    class Builder {
+        private val P: AlertController.AlertParams
+
+        constructor() {
+            P = AlertController.AlertParams()
+        }
+
+        fun setView(view: View): Builder {
+            P.mView = view
+            return this
+        }
+
+        fun create(): AlertDialog {
+            val dialog = AlertDialog()
+            P.apply(dialog.mAlert)
+            return dialog
+        }
+
+        fun show(): AlertDialog {
+            val dialog = create()
+            dialog.show()
+            return dialog
+        }
+    }
+}
+```
+
 
