alert dialog design pattern

--- a/_posts/2018-03-06-builder.md
+++ b/_posts/2018-03-06-builder.md
@@ -248,11 +248,17 @@ class AlertDialog {
         this.alertController = AlertController(getContext(), this, getWindow())
     }
 
+    // AlertDialog 中也会有 set 方法，最终也会传给 AlertController 中。
+    // 我们知道 Builder 中已经有这个方法，并且最终由 AlertController 直接设置给 AlertDialog，但这里又写 set 方法
+    // ，其目的是用户可以直接通过下面的 Builder 的 create() 方法拿到 AlertDialog，AlertDialog 可以自行再去
+    // 设置（修改）Builder 中构建的参数
     fun setView(view: View) {
         alertController.setView(view)
     }
 
+    //下面 Builder 的 show() 方法最终会调用到这个 onCreate() 方法
     protected fun onCreate(savedInstanceState: Bundle) {
+        //该方法就是 AlertDialog 的具体构建逻辑，即将 Builder 最终传给 AlertController 的参数全部设置给 AlertDialog
         alertController.installContent()
     }
 
@@ -263,6 +269,7 @@ class AlertDialog {
             P = AlertController.AlertParams()
         }
 
+        // builder 模式的 set 方法
         fun setView(view: View): Builder {
             P.mView = view
             return this
@@ -270,17 +277,64 @@ class AlertDialog {
 
         fun create(): AlertDialog {
             val dialog = AlertDialog()
-            P.apply(dialog.mAlert)
+            //将 set 方法设置给 AlertParams 的值传递给 AlertController
+            P.apply(dialog.alertController)
             return dialog
         }
 
         fun show(): AlertDialog {
             val dialog = create()
+            //该方法最终会调用 AlertDialog 的 onCreate 方法
             dialog.show()
             return dialog
         }
     }
 }
+
+class AlertController {
+    private val mDialog: AppCompatDialog
+    private val mAlertDialogLayout: Int
+    private var mView: View? = null
+    private val mWindow: Window
+    private val mContext: Context
+
+    constructor(context: Context, di: AppCompatDialog, window: Window) {
+        val a = context.obtainStyledAttributes(null, R.styleable.AlertDialog,
+                R.attr.alertDialogStyle, 0)
+        mWindow = window
+        mContext = context
+        mDialog = di //AlertDialog 对象最终是由 AlertController 持有，
+        mAlertDialogLayout = a.getResourceId(R.styleable.AlertDialog_android_layout, 0)
+    }
+
+    //AlertParams 会调用这些方法来将参数传给 AlertController
+    fun setView(view: View) {
+        mView = view
+    }
+
+    //Builder 的 show() 方法会调用 Dialog 的 show() 方法，最终会调用
+    //用 AlertParams 设置进来的参数构建 dialog，这里就是 AlertDialog 的具体构建逻辑
+    fun installContent() {
+        mDialog.setContentView(mAlertDialogLayout)
+        ...
+        val parentPanel: View = mWindow.findViewById(R.id.parentPanel)
+        ...
+    }
+
+
+    /**
+     * 通过 Builder 的 set() 方法设置的参数都传到 AlertParams 中
+     */
+    class AlertParams {
+        var mView: View? = null
+
+        //将 Builder 设置给 AlertParams 的值转交给 AlertController
+        fun apply(alertController: AlertController) {
+            if (mView != null) {
+                alertController.setView(mView)
+            }
+        }
+    }
 ```
 
 
