--- a/_posts/2018-03-06-builder.md
+++ b/_posts/2018-03-06-builder.md
@@ -248,9 +248,8 @@ class AlertDialog {
         this.alertController = AlertController(getContext(), this, getWindow())
     }
 
-    // AlertDialog 中也会有 set 方法，最终也会传给 AlertController 中。
-    // 我们知道 Builder 中已经有这个方法，并且最终由 AlertController 直接设置给 AlertDialog，但这里又写 set 方法
-    // ，其目的是用户可以直接通过下面的 Builder 的 create() 方法拿到 AlertDialog，AlertDialog 可以自行再去
+    // AlertDialog 中也会有 Builder 中的 set 方法
+    // 其目的是用户可以直接通过下面的 Builder 的 create() 方法拿到 AlertDialog，AlertDialog 可以自行再去
     // 设置（修改）Builder 中构建的参数
     fun setView(view: View) {
         alertController.setView(view)
@@ -322,9 +321,7 @@ class AlertController {
     }
 
 
-    /**
-     * 通过 Builder 的 set() 方法设置的参数都传到 AlertParams 中
-     */
+    //通过 Builder 的 set() 方法设置的参数都传到 AlertParams 中
     class AlertParams {
         var mView: View? = null
 
