--- a/_posts/2018-04-04-service.md
+++ b/_posts/2018-04-04-service.md
@@ -24,3 +24,144 @@ tags:
 + Bound(绑定服务)    
 当组件使用 bindService() 方法启动 Service 时，Service 就与该组件绑定了。绑定服务提供了客户端服务器接口来允许组件与服务进行交互，发送请求，获取返回值，升值可以通过 IPC 来跨进程进行这些操作。绑定服务仅仅只在另一个组件与之绑定期间运行。多个组件可以同时绑定一个 Service，当所有与之绑定的 Service 都解绑时，Service 才会被 destroy。
 
+尽管上面将启动和绑定服务分开来讲，一个服务既可以被绑定也可以被启动。是启动还是绑定取决于你实现 onStartCommand()（启动）还是 onBind()（绑定）回调。    
+
+> **Caution:**如果服务运行在主线程中，它是不会创建自己的线程，如果不指定的话也不会在单独的进程中运行。如果服务需要执行 CPU密集型工作或者是阻塞性工作，譬如后台播放音乐，网络请求，你就需要在服务里创建一个子线程来完成工作，否则会造成 ANR。 
+
+## Service 的基本用法
++ Declaring a service in the manifest
+
+Service 需要像 Activity 那样在 AndroidManifest 中声明：    
+```xml
+<manifest ... >
+  ...
+  <application ... >
+	  //将你创建的 Service 声明一下
+      <service android:name=".ExampleService" />
+      ...
+  </application>
+</manifest>
+```
+你可以通过[<service>](https://developer.android.com/guide/components/services.html#Basics)来查看更多的关于 service 在 manifest 中的声明信息。 `android:name` 是唯一必须的属性，用来指定 service 的名字。当你应用发布后，不要改变服务的名字。    
+> 为了确保 app 的安全性，启动 Service 时使用一个明确的 intent（创建 intent 的时候，直接指定要启动的目标的 name），并且不要设置 intent filters。使用隐含的 intent（通过 action 启动目标） 启动 service 会造成安全隐患，因为你不确定响应这个 intent 的 service 是哪个，而且用户也无法看到哪个服务启动了。从 Android 5.0 开始，如果你使用一个隐含 intent 调用 bindService() 系统会抛出异常。
+
+你可以通过指定 `android:exported=false` 属性来确保 service 只能被你的 app 启动。由于用户是可以在手机上看到哪些服务正在运行并且可以手动停止服务，你最好添加 `android:description `属性到 <service> 元素中，用于描述你的 Service 运行的好处。
+
+## Creating a started service
+started service 也就是另一个组建通过 startService() 启动的服务。它会调用 Service 中的 onStartCommand()。启动后，它的生命周期与启动它的组件是相互独立的，即使启动它的组件销毁了，它也会一直在后台运行。这时，服务自身可以通过调用 `stopSlef()`或者另一个组建通过调用 stopService() 来停止。    
+通过 startService(intent) 启动 Service 后，Service 在 onStartCommand() 中接收该 intent。     
+你可以继承下面2个类来创建 Service:    
++ Service
+
+它是所有服务的父类。如果你继承这个类，注意要创建线程来执行任务。如果你的服务要执行多线程，可以继承它来实现。 为了与下面的 IntentService 对比，我们也创建一个一次只能执行一个任务的服务：   
+```java
+public class HelloService extends Service {
+  private Looper mServiceLooper;
+  private ServiceHandler mServiceHandler;
+
+  // Handler that receives messages from the thread
+  private final class ServiceHandler extends Handler {
+      public ServiceHandler(Looper looper) {
+          super(looper);
+      }
+      @Override
+      public void handleMessage(Message msg) {
+          // Normally we would do some work here, like download a file.
+          // For our sample, we just sleep for 5 seconds.
+          try {
+              Thread.sleep(5000);
+          } catch (InterruptedException e) {
+              // Restore interrupt status.
+              Thread.currentThread().interrupt();
+          }
+          // Stop the service using the startId, so that we don't stop
+          // the service in the middle of handling another job
+          stopSelf(msg.arg1);
+      }
+  }
+
+  @Override
+  public void onCreate() {
+    // Start up the thread running the service.  Note that we create a
+    // separate thread because the service normally runs in the process's
+    // main thread, which we don't want to block.  We also make it
+    // background priority so CPU-intensive work will not disrupt our UI.
+    HandlerThread thread = new HandlerThread("ServiceStartArguments",
+            Process.THREAD_PRIORITY_BACKGROUND);
+    thread.start();
+
+    // Get the HandlerThread's Looper and use it for our Handler
+    mServiceLooper = thread.getLooper();
+    mServiceHandler = new ServiceHandler(mServiceLooper);
+  }
+
+  @Override
+  public int onStartCommand(Intent intent, int flags, int startId) {
+      Toast.makeText(this, "service starting", Toast.LENGTH_SHORT).show();
+
+      // For each start request, send a message to start a job and deliver the
+      // start ID so we know which request we're stopping when we finish the job
+      Message msg = mServiceHandler.obtainMessage();
+      msg.arg1 = startId;
+      mServiceHandler.sendMessage(msg);
+
+      // If we get killed, after returning from here, restart
+      return START_STICKY;
+  }
+
+  @Override
+  public IBinder onBind(Intent intent) {
+      // We don't provide binding, so return null
+      return null;
+  }
+
+  @Override
+  public void onDestroy() {
+    Toast.makeText(this, "service done", Toast.LENGTH_SHORT).show();
+  }
+}
+```
+在服务启动的时候会调用 onCreate ，我们在里面创建一个 HandlerThread 用于开启一个线程，目的是将它的 Looper 传给一个 Handler。这样，通过该 handler 发送的消息都是在这个 HandlerThread 中处理的。    
+调用 startService 后，onCreate 执行完后会执行到 onStartCommand() 这时会利用 onCreate 中创建好的 Handler 来发送消息来让 handler 做任务。如果服务启动后，多次调用 startService 不会再调用 onCreate()，但是会多次调用 onStartCommand() 方法来达到创建多个任务的目的。     
+我们可以不用 Handler，直接在里面开线程执行任务，这样每次调用 startService 就会调用 onStartCommand()，从而达到同时执行多个任务的目的。    
+onStartCommand() 返回值是用来告诉系统当服务被杀死后该如何继续这个任务。它有3个值：    
++ START_NOT_STICKY
+如果服务在执行完 onStartComman() 后被系统杀掉，不会重新创建服务，除非有待处理的 intent。它可以避免在非必要的情况下运行服务。
++ START_STICKY
+如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand(),但不会处理最后的一个 intent。系统会调用 onStartCommand()，里面的 intent 参数为空，除非有待处理的 intent。这适用于不执行命令但会无限期运行并等待任务的媒体播放器之类的服务。
++ START_REDELIVER_INTENT
+如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand()。系统会调用 onStartCommand()，传入最后一个 intent,待处理的 intent 会依次处理。这适用于文件下载这类需要立刻恢复的服务。
+
++ IntentService
+
+它是 Service 的子类，内部使用了一个 worker 线程来**依次**处理所有的请求。如果你不需要同时执行多个请求的话，IntentService　无疑是最好的选择。当你通过 startService 启动该 Service 后，它会在 onStartCommand() 中创建一个 worker 线程来执行所有的 intent。它会维护一个工作队列，每次会传递一个 intent 到 onhandleIntent() 方法中，你只需要实现 onHandleIntent() 方法即可，无需担心多线程问题。当执行玩所有的请求后，会自动通知服务，而不需要调用 stopSelf() 方法。
+```java
+public class HelloIntentService extends IntentService {
+
+  /**
+   * A constructor is required, and must call the super IntentService(String)
+   * constructor with a name for the worker thread.
+   */
+  public HelloIntentService() {
+      super("HelloIntentService");
+  }
+
+  /**
+   * The IntentService calls this method from the default worker thread with
+   * the intent that started the service. When this method returns, IntentService
+   * stops the service, as appropriate.
+   */
+  @Override
+  protected void onHandleIntent(Intent intent) {
+      // Normally we would do some work here, like download a file.
+      // For our sample, we just sleep for 5 seconds.
+      try {
+          Thread.sleep(5000);
+      } catch (InterruptedException e) {
+          // Restore interrupt status.
+          Thread.currentThread().interrupt();
+      }
+  }
+}
+```    
+可以看到，只需要有一个构造函数，然后实现 onHandleIntent() 方法即可。
