--- a/_posts/2018-04-04-service.md
+++ b/_posts/2018-04-04-service.md
@@ -28,9 +28,7 @@ tags:
 
 > **Caution:**如果服务运行在主线程中，它是不会创建自己的线程，如果不指定的话也不会在单独的进程中运行。如果服务需要执行 CPU密集型工作或者是阻塞性工作，譬如后台播放音乐，网络请求，你就需要在服务里创建一个子线程来完成工作，否则会造成 ANR。 
 
-## Service 的基本用法
-+ Declaring a service in the manifest
-
+## 在 Manifest 中声明 Service
 Service 需要像 Activity 那样在 AndroidManifest 中声明：    
 ```xml
 <manifest ... >
@@ -52,7 +50,6 @@ started service 也就是另一个组建通过 startService() 启动的服务。
 通过 startService(intent) 启动 Service 后，Service 在 onStartCommand() 中接收该 intent。     
 你可以继承下面2个类来创建 Service:    
 + Service
-
 它是所有服务的父类。如果你继承这个类，注意要创建线程来执行任务。如果你的服务要执行多线程，可以继承它来实现。 为了与下面的 IntentService 对比，我们也创建一个一次只能执行一个任务的服务：   
 ```java
 public class HelloService extends Service {
@@ -125,15 +122,15 @@ public class HelloService extends Service {
 调用 startService 后，onCreate 执行完后会执行到 onStartCommand() 这时会利用 onCreate 中创建好的 Handler 来发送消息来让 handler 做任务。如果服务启动后，多次调用 startService 不会再调用 onCreate()，但是会多次调用 onStartCommand() 方法来达到创建多个任务的目的。     
 我们可以不用 Handler，直接在里面开线程执行任务，这样每次调用 startService 就会调用 onStartCommand()，从而达到同时执行多个任务的目的。    
 onStartCommand() 返回值是用来告诉系统当服务被杀死后该如何继续这个任务。它有3个值：    
-+ START_NOT_STICKY
++ START_NOT_STICKY    
 如果服务在执行完 onStartComman() 后被系统杀掉，不会重新创建服务，除非有待处理的 intent。它可以避免在非必要的情况下运行服务。
-+ START_STICKY
++ START_STICKY    
 如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand(),但不会处理最后的一个 intent。系统会调用 onStartCommand()，里面的 intent 参数为空，除非有待处理的 intent。这适用于不执行命令但会无限期运行并等待任务的媒体播放器之类的服务。
-+ START_REDELIVER_INTENT
-如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand()。系统会调用 onStartCommand()，传入最后一个 intent,待处理的 intent 会依次处理。这适用于文件下载这类需要立刻恢复的服务。
++ START_REDELIVER_INTENT    
+如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand()。系统会调用 onStartCommand()，传入最后一个 intent,待处理的 intent 会依次处理。这适用于文件下载这类需要立刻恢复的服务。    
+
 
 + IntentService
-
 它是 Service 的子类，内部使用了一个 worker 线程来**依次**处理所有的请求。如果你不需要同时执行多个请求的话，IntentService　无疑是最好的选择。当你通过 startService 启动该 Service 后，它会在 onStartCommand() 中创建一个 worker 线程来执行所有的 intent。它会维护一个工作队列，每次会传递一个 intent 到 onhandleIntent() 方法中，你只需要实现 onHandleIntent() 方法即可，无需担心多线程问题。当执行玩所有的请求后，会自动通知服务，而不需要调用 stopSelf() 方法。
 ```java
 public class HelloIntentService extends IntentService {
