--- a/_posts/2018-04-04-service.md
+++ b/_posts/2018-04-04-service.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Service
-subtitle:   
+subtitle:   全面讲解 Service 和 IntentService
 header-img: img/post-bg-universe.jpg
 author:     Allen Vork
 catalog: true
@@ -122,11 +122,11 @@ public class HelloService extends Service {
 调用 startService 后，onCreate 执行完后会执行到 onStartCommand() 这时会利用 onCreate 中创建好的 Handler 来发送消息来让 handler 做任务。如果服务启动后，多次调用 startService 不会再调用 onCreate()，但是会多次调用 onStartCommand() 方法来达到创建多个任务的目的。     
 我们可以不用 Handler，直接在里面开线程执行任务，这样每次调用 startService 就会调用 onStartCommand()，从而达到同时执行多个任务的目的。    
 onStartCommand() 返回值是用来告诉系统当服务被杀死后该如何继续这个任务。它有3个值：    
-+ START_NOT_STICKY    
+ + START_NOT_STICKY    
 如果服务在执行完 onStartComman() 后被系统杀掉，不会重新创建服务，除非有待处理的 intent。它可以避免在非必要的情况下运行服务。
-+ START_STICKY    
+ + START_STICKY    
 如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand(),但不会处理最后的一个 intent。系统会调用 onStartCommand()，里面的 intent 参数为空，除非有待处理的 intent。这适用于不执行命令但会无限期运行并等待任务的媒体播放器之类的服务。
-+ START_REDELIVER_INTENT    
+ + START_REDELIVER_INTENT    
 如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand()。系统会调用 onStartCommand()，传入最后一个 intent,待处理的 intent 会依次处理。这适用于文件下载这类需要立刻恢复的服务。    
 
 
