--- a/_posts/2018-04-04-service.md
+++ b/_posts/2018-04-04-service.md
@@ -13,7 +13,7 @@ tags:
 这几天回顾了下 Service，查了一些国内外相应的文档，发现其实大多数国内的文档都只是简单的讲下 Service 的两种启动方式而已，并不是很全，所以决定写一下这方面的文档供参考。本文主要参考 google 的 [Service ](https://developer.android.com/guide/components/services.html) 官方文档。
 ## 什么是Service
 它是一个在**后台**（即不提供用户界面）执行**长时间**操作的应用组件。服务可由其他应用组件启动，即使用户切换到其他应用，服务仍将在后台继续运行。 此外，可以将组件绑定到服务来与之进行交互，并可以执行进程间通信 (IPC)。 例如，服务可以在后台处理网络事务、播放音乐，执行文件 I/O 或与内容提供程序交互。
-![]({{site.url}}/img/android/basic/traceview/traceview1.png)
+
 ## Service 的3种类型    
 + Foreground(前台服务)    
 前台服务是用来执行用户可以感知的操作，如音乐播放器会用前台服务来播放音乐。前台服务必须要展示一个通知。即使用户不与该应用进行交互，前台服务依然会继续运行。    
@@ -45,11 +45,11 @@ Service 需要像 Activity 那样在 AndroidManifest 中声明：
 
 你可以通过指定 `android:exported=false` 属性来确保 service 只能被你的 app 启动。由于用户是可以在手机上看到哪些服务正在运行并且可以手动停止服务，你最好添加 `android:description `属性到 <service> 元素中，用于描述你的 Service 运行的好处。
 
-## Creating a started service
-started service 也就是另一个组建通过 startService() 启动的服务。它会调用 Service 中的 onStartCommand()。启动后，它的生命周期与启动它的组件是相互独立的，即使启动它的组件销毁了，它也会一直在后台运行。这时，服务自身可以通过调用 `stopSlef()`或者另一个组建通过调用 stopService() 来停止。    
+## Creating a started service（创建一个启动服务）
+started service 也就是另一个组建**通过 startService() 启动**的服务。它会调用 Service 中的 onStartCommand()。启动后，它的生命周期与启动它的组件是相互独立的，即使启动它的组件销毁了，它也会一直在后台运行。这时，服务自身可以通过调用 `stopSlef()`或者另一个组建通过调用 stopService() 来停止。    
 通过 startService(intent) 启动 Service 后，Service 在 onStartCommand() 中接收该 intent。     
 你可以继承下面2个类来创建 Service:    
-+ Service    
+### Service    
 它是所有服务的父类。如果你继承这个类，注意要创建线程来执行任务。如果你的服务要执行多线程，可以继承它来实现。 为了与下面的 IntentService 对比，我们也创建一个一次只能执行一个任务的服务：   
 ```java
 public class HelloService extends Service {
@@ -130,7 +130,7 @@ onStartCommand() 返回值是用来告诉系统当服务被杀死后该如何继
 如果服务在执行完 onStartComman() 后被系统杀掉，则重新创建服务并调用 onStartCommand()。系统会调用 onStartCommand()，传入最后一个 intent,待处理的 intent 会依次处理。这适用于文件下载这类需要立刻恢复的服务。    
 
 
-+ IntentService    
+### IntentService    
 它是 Service 的子类，内部使用了一个 worker 线程来**依次**处理所有的请求。如果你不需要同时执行多个请求的话，IntentService　无疑是最好的选择。当你通过 startService 启动该 Service 后，它会在 onStartCommand() 中创建一个 worker 线程来执行所有的 intent。它会维护一个工作队列，每次会传递一个 intent 到 onhandleIntent() 方法中，你只需要实现 onHandleIntent() 方法即可，无需担心多线程问题。当执行玩所有的请求后，会自动通知服务，而不需要调用 stopSelf() 方法。
 ```java
 public class HelloIntentService extends IntentService {
@@ -162,3 +162,87 @@ public class HelloIntentService extends IntentService {
 }
 ```    
 可以看到，只需要有一个构造函数，然后实现 onHandleIntent() 方法即可。
+
+### 启动服务
+你可以传一个 Intent 给 startService() 或 startForegroundService() 来启动服务。系统将会调用 onStartCommand() 方法并将 Intent 传给他。    
+```java
+Intent intent = new Intent(this, HelloService.class);
+startService(intent);
+```
+如果该服务不提供绑定的话，该 intent 是唯一能让启动 Service 的组件和 Service 进行通信的模式。如果你想让 Service 发送一个返回值，你可以通过 `PendingIntent getBroadcast (Context context, int requestCode, Intent intent, int flags)`创建一个 PendingIntent，然后在 intent 里传给 Service。那么 Service 就能通过 broadcast 来发送结果。    
+
+### 停止服务
+停止服务只需要调用 stopSelf() 或 stopService() 即可。如果服务并发处理了多个任务（即多次调用了 onStartCommand()),你不应该在处理完请求后直接停止服务，因为你可能还会有新的请求。你应该通过 stopSelf(int) 方法来停止对应的请求，这个 int 值就是所启动的请求的 id（即 onStartCommand() 中的 startId 参数）,那么当服务在调用 stopSelf(int) 之前如果接收到新的请求，id 就会不匹配，那么就不会停止服务。
+
+## 创建一个绑定服务
+绑定服务在客户端服务器模型中，承担的是服务器的角色。客户端通过调用 bindService() 方法来将之与服务绑定起来，它通常不允许组件通过调用 startService() 来启动。    
+当你需要与 Service 进行交互，或者是想通过 IPC 暴露功能给其余的应用时就需要创建绑定服务。    
+创建绑定服务，你需要实现 onBind() 回调来返回一个 IBinder，它定义了与 Service 进行交互的接口。组件调用 bindService() 来获取这个借口从而调用 Service 中的方法。这个 Service 仅仅服务于绑定它的组件，所以当没有组件绑定它时，系统会将该服务销毁。你无需使用 stopSelf(), stopService 方法来停止服务。    
+多个客户端可以同时绑定到一个服务。当一个客户端不再与 Service 进行交互时，调用 unbindService() 来解绑。当没有客户端与服务绑定的时候，系统会销毁 Service。    
+
+## 给用户发送通知
+服务可以使用 Toast 或状态栏通知来给用户发送通知。通常在文件下载之类的后台任务完成后会使用状态栏通知来告知用户，用户点击通知可以启动一个 Activity。
+
+## 在前台运行服务
+前台服务是用户可以感知的服务，并且在内存不足时，系统也不会将之杀掉。前台服务必须要提供一个通知，当服务停止或者从前台移除后才能被干掉。譬如播放音乐就需要用前台服务，因为用户可以确切的知道它的操作。状态栏上的通知可以展示当前播放的音乐，并且点击后可以打开 Activity 让用户与播放器进行交互。    
+通过调用 startForground() 来启动一个前台服务，它里面有两个参数，一个是通知的 id，一个是通知。这个通知必须有一个优先级，如 PRIORITY_LOW。    
+```java
+Intent notificationIntent = new Intent(this, ExampleActivity.class);
+PendingIntent pendingIntent =
+        PendingIntent.getActivity(this, 0, notificationIntent, 0);
+
+Notification notification =
+          new Notification.Builder(this, CHANNEL_DEFAULT_IMPORTANCE)
+    .setContentTitle(getText(R.string.notification_title))
+    .setContentText(getText(R.string.notification_message))
+    .setSmallIcon(R.drawable.icon)
+    .setContentIntent(pendingIntent)
+    .setTicker(getText(R.string.ticker_text))
+    .build();
+
+//id 必须不为0
+startForeground(ONGOING_NOTIFICATION_ID, notification);
+```
+你可以调用 stopForground()来将服务从前台移除。它里面的一个 boolean 参数表示是否将状态栏的通知也一并移除掉。这个方法不会停止服务，如果你在它依然运行在前台的时候调用这个方法，通知也会被移除掉。
+
+## 实现生命周期的回调
+类似 Activity，你也可以实现 service 生命周期回调方法来检测 service 状态的变化。
+```java
+public class ExampleService extends Service {
+    int mStartMode;       // indicates how to behave if the service is killed
+    IBinder mBinder;      // interface for clients that bind
+    boolean mAllowRebind; // indicates whether onRebind should be used
+
+    @Override
+    public void onCreate() {
+        // The service is being created
+    }
+    @Override
+    public int onStartCommand(Intent intent, int flags, int startId) {
+        // The service is starting, due to a call to startService()
+        return mStartMode;
+    }
+    @Override
+    public IBinder onBind(Intent intent) {
+        // A client is binding to the service with bindService()
+        return mBinder;
+    }
+    @Override
+    public boolean onUnbind(Intent intent) {
+        // All clients have unbound with unbindService()
+        return mAllowRebind;
+    }
+    @Override
+    public void onRebind(Intent intent) {
+        // A client is binding to the service with bindService(),
+        // after onUnbind() has already been called
+    }
+    @Override
+    public void onDestroy() {
+        // The service is no longer used and is being destroyed
+    }
+}
+```
+我们来看看 service 的生命周期：    
+![]({{site.url}}/img/android/basic/service/service_lifecycle.png)    
+左边是使用 startService() 启动的服务的生命周期，右边则是通过 bindService 启动的服务的生命周期。虽然上图将 startService() 与 bindService() 启动的服务分离开了，但是无论服务是如何启动的，它都允许客户端再去绑定它。即通过 startService() 启动服务,调用 onStartCommand() 后，再通过 bindService() 来绑定服务，该服务依然能调用 onBind()。 
