--- a/_posts/2018-04-08-fiddler.md
+++ b/_posts/2018-04-08-fiddler.md
@@ -19,15 +19,15 @@ Fiddler 是一个 http 抓包工具，具有以下功能：
 本文主要介绍如何用 fiddler 抓取 android 手机上的请求。
 
 ## 配置
-+ 配置 Fiddler    
+
+#### 配置 Fiddler    
 安装完后，点击菜单栏上的 `Tools` -> `Options` 然后去修改下面两个地方：    
 ![]({{site.url}}/img/common/fiddler/1.png) 
 我们可以设置本地代理端口号，默认为 8888，一般不改。然后打开远程连接来允许调试手机。
 ![]({{site.url}}/img/common/fiddler/2.png) 
 如果项目中使用的是 https 协议，则需要按上图开启 https 支持。完成后，重启 Fiddler 即可。    
 
-
-+ 配置手机    
+#### 配置手机    
 将手机和电脑连在同一局域网下，然后进入当前连接的 wifi，设置代理：
 ![]({{site.url}}/img/common/fiddler/4.png) 
 需要设置上面的服务器和端口，其中服务器地址（即电脑的 IP 地址）可以看 Fiddler 上的 `Online`：
