--- a/_posts/2018-04-08-fiddler.md
+++ b/_posts/2018-04-08-fiddler.md
@@ -6,8 +6,7 @@ header-img: img/post-bg-universe.jpg
 author:     Allen Vork
 catalog: true
 tags:
-    - android
-    - android basic    
+    - tools  
 ---
    
 ## 简介
