--- a/_posts/2018-04-08-fiddler.md
+++ b/_posts/2018-04-08-fiddler.md
@@ -36,5 +36,14 @@ Fiddler 是一个 http 抓包工具，具有以下功能：
 ![]({{site.url}}/img/common/fiddler/5.png)
 
 ## Fiddler 使用
+### 查看请求以及请求回来的数据
 上面配置完后，手机进行请求就可以在 Fiddler 面板的左边看到会话了。点击我们关心的某个会话，然后在右边的面板选择 `Inspectors` 就可以看到请求的数据和返回的数据了。
 ![]({{site.url}}/img/common/fiddler/6.png)
+
+### 请求太多？仅显示我们想要的请求
+我们可以仅仅过滤我们需要的某个域名的请求：    
+![]({{site.url}}/img/common/fiddler/7.png)
+点击面板右边的 `Filters`，然后勾选 `Use Filters`，然后将 `No Host Filter` 改成 `Show only the following Hosts`，然后将左侧面板里面想显示的 host 填进去，再点击 `Changes not yet saved`即可。
+
+### 拦截指定请求，返回我们自定义的数据
+
