--- a/_posts/2018-04-08-fiddler.md
+++ b/_posts/2018-04-08-fiddler.md
@@ -46,4 +46,16 @@ Fiddler 是一个 http 抓包工具，具有以下功能：
 点击面板右边的 `Filters`，然后勾选 `Use Filters`，然后将 `No Host Filter` 改成 `Show only the following Hosts`，然后将左侧面板里面想显示的 host 填进去，再点击 `Changes not yet saved`即可。
 
 ### 拦截指定请求，返回我们自定义的数据
+譬如说我们需要将 B 请求的数据替换为 A 的数据：    
+1. 拿到 A 请求返回的数据：首先右键点击面板左边的你想要的 A 请求，点击 `save` -> `Response` -> `Response Body` 将 A 请求返回的 json 串保存下来。    
+2. [格式化 json 串](https://c.runoob.com/front-end/53)：我保存下来的 json 串被插入了一些字符进去了，我们需要将这些字符删除掉，我们可以进入前面的这个网站，将 json 串拷贝进去，然后点击格式化，如果格式化不成功，看看哪里有不连贯的地方（看哪一行的字符串后面有空白，一般第一行就有），然后直接将该行删掉，然后将该行的上下两行连起来，直到成功格式化。    ![]({{site.url}}/img/common/fiddler/10.png)     ![]({{site.url}}/img/common/fiddler/11.png)    成功后将数据保存到本地如 a.json。
+3. 点击面板右边的 `AutoResponder`，勾选 `Enable Rules`(开启自动重定向功能，这样我们就可以在下面的面板添加重定向规则了）, `Unmatched request passthrough`（仅重定向满足条件的请求)    ![]({{site.url}}/img/common/fiddler/12.png)    
+4. 手机开始进行 B 请求，然后将 B 请求从左边面板拖动到右边，就可以看到：    ![]({{site.url}}/img/common/fiddler/13.png)
+5. 点击拖到右边面板的请求，然后将将前面保存的想替换的数据导进来，然后点击 `save` 即可。        ![]({{site.url}}/img/common/fiddler/14.png)
 
+我们除了可以修改这个请求返回的数据外，必要情况下还要修改请求。因为一个请求后面会带很多参数（譬如请求的时间，每次都不一样），即使同一个请求，但请求的 url 都不同，这样会导致匹配不到这个 url，所以前面修改的请求返回的数据也不生效。这时我们只需要请求匹配前面一部分就行了。
+![]({{site.url}}/img/common/fiddler/16.png)
+我们看下这个请求，我们仅仅需要问号前面的 url 匹配的话，就将该请求返回的结果替换成 a.json。
+![]({{site.url}}/img/common/fiddler/17.png)
+那么我们直接修改该 url，将 **Extract** 替换成 regex，然后将问号后面全删掉，替换成 .* 即可。然后点击 `Test...` 来测试修改后的 url 能否匹配到原始的 url。    
+这样，只要 url 前面匹配的话就直接将返回数据替换成 a.json。
