--- a/_posts/2018-04-04-service.md
+++ b/_posts/2018-04-04-service.md
@@ -40,7 +40,7 @@ Service 需要像 Activity 那样在 AndroidManifest 中声明：
   </application>
 </manifest>
 ```
-你可以通过 [<service>](https://developer.android.com/guide/components/services.html#Basics) 来查看更多的关于 service 在 manifest 中的声明信息。 `android:name` 是唯一必须的属性，用来指定 service 的名字。当你应用发布后，不要改变服务的名字。    
+你可以通过 [service 配置](https://developer.android.com/guide/components/services.html#Basics)来查看更多的关于 service 在 manifest 中的声明信息。 android:name 是唯一必须的属性，用来指定 service 的名字。当你应用发布后，不要改变服务的名字。    
 > 为了确保 app 的安全性，启动 Service 时使用一个明确的 intent（创建 intent 的时候，直接指定要启动的目标的 name），并且不要设置 intent filters。使用隐含的 intent（通过 action 启动目标） 启动 service 会造成安全隐患，因为你不确定响应这个 intent 的 service 是哪个，而且用户也无法看到哪个服务启动了。从 Android 5.0 开始，如果你使用一个隐含 intent 调用 bindService() 系统会抛出异常。
 
 你可以通过指定 `android:exported=false` 属性来确保 service 只能被你的 app 启动。由于用户是可以在手机上看到哪些服务正在运行并且可以手动停止服务，你最好添加 `android:description `属性到 <service> 元素中，用于描述你的 Service 运行的好处。
