--- a/_posts/2018-04-08-fiddler.md
+++ b/_posts/2018-04-08-fiddler.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      Fiddler抓包工具
 subtitle:   
-header-img: img/pen.jpg
+header-img: img/pen.png
 author:     Allen Vork
 catalog: true
 tags:
