--- a/_posts/2018-04-04-service.md
+++ b/_posts/2018-04-04-service.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      Service
 subtitle:   全面讲解 Service 和 IntentService
-header-img: img/wood1.png
+header-img: img/yellow1.png
 author:     Allen Vork
 catalog: true
 tags:
