--- a/_posts/2018-04-04-service.md
+++ b/_posts/2018-04-04-service.md
@@ -6,8 +6,7 @@ header-img: img/yellow1.png
 author:     Allen Vork
 catalog: true
 tags:
-    - android
-    - android basic    
+    - android basics    
 ---
 
 这几天回顾了下 Service，查了一些国内外相应的文档，发现其实大多数国内的文档都只是简单的讲下 Service 的两种启动方式而已，并不是很全，所以决定写一下这方面的文档供参考。本文主要参考 google 的 [Service ](https://developer.android.com/guide/components/services.html) 官方文档。
