--- a/_posts/2018-04-22-LruCache.md
+++ b/_posts/2018-04-22-LruCache.md
@@ -11,7 +11,6 @@ tags:
 
 ## LruCache 是什么
 Lru（Least Recently Used）近期最少使用算法是将近期最少使用的数据从缓存中移除。它主要是用于取代 SoftReference 的。其实 LruCache 内部仅仅是对 LinkedHashMap 的封装，Lru 也是由 LinkedHashMap 实现的。 LruCache 中做的主要操作是设置缓存大小，然后在往缓存放数据的时候，如果超过所设置的大小，就将不常用的数据移除掉。
-![]({{site.url}}/img/common/photoshop/1.png)   
 
 ## 源码解析
 ```java
@@ -20,7 +19,8 @@ public class LruCache<K, V> {
 
     /**
      * @param maxSize 指缓存的大小，默认是缓存的个数
-     * 如果是 bitmap 的话，就要重写 sizeOf 方法，用于返回一个 bitmap 的大小，而 maxsize 就是所缓存的 bitmap 的总大小。
+     * 如果是 bitmap 的话，就要重写 sizeOf 方法，用于返回一个 bitmap 的大小，
+     * 而 maxsize 就是所缓存的 bitmap 的总大小。
      */
     public LruCache(int maxSize) {
         if (maxSize <= 0) {
@@ -43,7 +43,10 @@ public class LruCache<K, V> {
             missCount++;
         }
 
-        //缓存中没找到的话就调用 create 去创建（这一步由子类实现），這個方法沒加锁，具体可以看下面该方法的注释
+        /**
+         *缓存中没找到的话就调用 create 去创建（这一步由子类实现），
+         *這個方法沒加锁，具体可以看下面该方法的注释
+         */
         V createdValue = create(key);
         if (createdValue == null) {
             return null;
@@ -55,7 +58,7 @@ public class LruCache<K, V> {
             mapValue = map.put(key, createdValue);
 
             if (mapValue != null) {
-                // mapValue 不为 null 说明在 create 的时候，缓存已经改变了，该值（mapValue)已经被添加到缓存了
+                // mapValue 不为 null 说明在 create 的时候，该值（mapValue)已经被添加到缓存了
                 // 那么就保留 mapValue，将 createValue 丢弃
                 map.put(key, mapValue);
             } else {
@@ -120,8 +123,8 @@ public class LruCache<K, V> {
     }
 
     /**
-     * 该方法没加锁（因为创建的方法都是单独去创建的，一般不涉及到多个线程访问共享变量的问题），那么多个线程可以同时
-     * 请求相同的数据的情况是存在的。那么就有了上面 get() 方法中 if (mapValue != null) 的判断
+     * 该方法没加锁（因为创建的方法一般不涉及到多个线程访问共享变量的问题），那么多个线程
+     * 可以同时请求相同的数据的情况是存在的。那么就有了上面 get() 方法中 if (mapValue != null) 的判断
      */
     protected V create(K key) {
         return null;
