--- a/_posts/2018-04-22-LruCache.md
+++ b/_posts/2018-04-22-LruCache.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      LruCache
 subtitle:   源码讲解
-header-img: img/pen1.png
+header-img: img/android2.png
 author:     Allen Vork
 catalog: true
 tags:
