--- a/_posts/2018-03-03-Jekyll.md
+++ b/_posts/2018-03-03-Jekyll.md
@@ -20,13 +20,8 @@ tags:
 
 - **安装 ruby**   
  
-	下载 [ruby](https://rubyinstaller.org/downloads/) 安装 Ruby 2.3.3 版本（注意不能安装高版本，因为 DevKit 要求 Ruby 版本在 2.0-2.3)。 安装完成后，添加环境变量（如 D:\software\ruby\Ruby23-x64\install\bin）到系统中去。    
+	下载 [ruby](https://rubyinstaller.org/downloads/) 。 安装完成后，添加环境变量（如 D:\software\ruby\Ruby23-x64\install\bin）到系统中去（安装的时候会自动帮你添加的，如果没有添加的话才需要手动添加）。    
 	打开命令行工具输入`ruby -v`来验证是否正常安装了。    
- 
-- **安装 DevKit**  
-   
-	在上面的 ruby 网站的最下面找到 `DevKit-mingw64-64-4.7.2-20130224-1432-sfx.exe ` （注意我这是 64 位版本的，32 位的注意下另一个），然后解压出来。打开命令行工具进入到解压出来的 DevKit 目录中，然后执行 `ruby dk.rb init` 来初始化 devkit 并将其绑定到 Ruby 的安装目录下（我们可以打开 devkit 目录中的 config.yml 里面将 ruby 的 bin 目录写进去了）。完成后执行 `ruby dk.rb install`就 ok 了。    
-	执行 ` gem install json --platform=ruby` 来检测 Ruby 是否已成功安装。
 
 - **安装 Jekyll** 
    
