--- a/_posts/2018-05-06-AIDL-2.md
+++ b/_posts/2018-05-06-AIDL-2.md
@@ -15,7 +15,7 @@ tags:
 
 ## 生成的 java 文件的结构
 ![]({{site.url}}/img/android/basic/aidl/advance/2.png)   
-上图为 java 文件的结构，里面有一个 Stub 类，Stub 中还有一个 Proxy 的内部类。我们通过 IAvengerAidlInterface.Stub.asInterface(service) 得到的实际是这个 Proxy 类的实例。通过它调用接口的方法时会调用到 Stub 类中的 onTransact(int code, .Parcel data, Parcel reply, int flags) 方法，它是真正执行相关 aidl 接口的方法。执行完成后将结果装入一个 reply 的 Parcel 中返回给客户端。
+上图为 java 文件的结构，里面有一个 Stub 类，Stub 中还有一个 Proxy 的内部类。我们通过 IAvengerAidlInterface.Stub.asInterface(service) 得到的实际是这个 Proxy 类的实例。通过它调用接口的方法时会调用 transact 方法，该方法会调用到服务器的 onTransact 方法，此时客户端的线程会被挂起，直到服务器端返回。所以如果服务器端是耗时操作，客户端需要在线程中执行方法的调用。而服务器端的 onTransact 方法是运行在 Binder 线程池中，所以不管方法耗不耗时都应该采用同步的方法实现。Stub 类中的 onTransact(int code, .Parcel data, Parcel reply, int flags) 方法是真正执行相关 aidl 接口的方法。执行完成后将结果装入一个 reply 的 Parcel 中返回给客户端。
 ## 详解该 java 文件的具体实现
 ```java
 public interface IAvengerAidlInterface extends android.os.IInterface {
@@ -181,7 +181,11 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                     } else {
                         _data.writeInt(0);
                     }
-                    //然后调用服务器的 transact 方法
+                    //调用 transact 方法后，该远程请求会经过系统底层封装后调用到服务器端的 onTransact，客户端的该线程会被挂起，
+                    //那么如果该方法很耗时就要开线程调用了。而 onTransact 方法本身就是在服务器端的 binder 线程池中执行的，所以
+                    //Binder方法不管耗不耗时都应该采用同步的方法实现。
+                    //我们可以看到 transact 方法传的不是 Avenger 对象，而是该对象所需要的参数的 Parcel，这就解释了上面的 onTransact
+                    //方法为什么要直接 New 一个或者采用 Parcelable 的 Create 来创建了。
                     mRemote.transact(Stub.TRANSACTION_addAvengerIn, _data, _reply, 0);
                     _reply.readException();
                 } finally {
@@ -247,3 +251,7 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
     public void addAvengerOut(com.example.aidlserver.aidlmodel.Avenger avenger) throws android.os.RemoteException;
 }
 ```
+
+## 下面我们看下 Binder 工作机制图
+![]({{site.url}}/img/android/basic/aidl/advance/3.png) 
+结合上面的解释很好懂。
