--- a/_posts/2018-05-06-AIDL.md
+++ b/_posts/2018-05-06-AIDL.md
@@ -109,7 +109,10 @@ interface IAvengerAidlInterface {
 ```java
 class AidlService : Service() {
 
-    private var avengerList: MutableList<Avenger> = ArrayList<Avenger>()
+    //前面讲过 AIDL 只支持 ArrayList,为什么这里可以用 CopyOnWriteArrayList 
+    //以为 AIDL 中支持的是抽象的 List 而 List 只是一个接口。虽然返回的是 CopyOnWriteArrayList
+    //但 Binder 会根据 List 的规范去访问数据并返回 ArrayList 给客户端
+    private var avengerList: MutableList<Avenger> = CopyOnWriteArrayList<Avenger>()
 
     override fun onCreate() {
         super.onCreate()
