aidl binder pool

--- a/_posts/2018-05-06-AIDL.md
+++ b/_posts/2018-05-06-AIDL.md
@@ -284,3 +284,7 @@ class MainActivity : AppCompatActivity() {
 in: 数据只能有客户端传给服务器，服务器对数据的修改不会影响到客户端。如客户端调用 addAvengerIn(in Avenger) 方法将 Avenger 对象传给服务器，服务器拿到后，修改 avenger 的名字，客户端是不会发生改变的。    
 out: 数据只能由服务器传给客户端，若客户端调用 addAvengerIn（out Avenger) 方法，服务器端能接受到这个对象，但该对象内的属性值为空。服务器端拿到该对象后，修改其属性值会同步到客户端。    
 inout: 所有修改都会同步。
+
+> 与之相关的还有死亡代理，Binder 连接池，下面的文章比较详细，就不赘述了    
+
++ [细说Binder连接池](https://www.jianshu.com/p/31b5b43ad336)
