--- a/_posts/2018-06-25-HashMap.md
+++ b/_posts/2018-06-25-HashMap.md
@@ -46,7 +46,8 @@ HashMap 内部会有一个数组，当 put 数据进来的时候，会根据 key
 ![]({{site.url}}/img/android/datastructures/hashmap/3.jpg)
 
 ## threshold
-阈值（threshold）可以看作是当前哈希表的容量 * 加载因子，当元素达到阈值的时候需要进行扩容。加载因子（loadFactor）描述了扩容时的填充程度。如果 loadFactor 过大，则 HashMap 扩容前发生的 hash 冲突的概率就会越大，那么单链表的长度也会越长，那么在查找的时候会因为单链表的长度过长而导致查找的效率变低。如果 loadFactor 设置过小，那么 HashMap 的空间利用率会降低，导致 HashMap 在很多空间没有利用的情况下就开始扩容。默认的为 0.75。首先来看下构造函数：
+**阈值**（threshold）可以看作是当前哈希表的**容量 * 加载因子** ，当元素达到阈值的时候需要进行扩容。    
+**加载因子**（loadFactor）描述了扩容时的填充程度。如果 loadFactor 过大，则 HashMap 扩容前发生的 hash 冲突的概率就会越大，那么单链表的长度也会越长，那么在查找的时候会因为单链表的长度过长而导致查找的效率变低。如果 loadFactor 设置过小，那么 HashMap 的空间利用率会降低，导致 HashMap 在很多空间没有利用的情况下就开始扩容。默认的为 0.75。首先来看下构造函数：
 ```java
     /**
      * @param  initialCapacity 初始容量
@@ -253,11 +254,11 @@ HashMap 内部会有一个数组，当 put 数据进来的时候，会根据 key
         ...
     }
 ```
-可以看出它是通过 **(n - 1) & hash** 计算出结点在数组中的位置而不是 hash % n（n 即为数组的长度）。hash % n 很好理解，假设数组长度为64，共有64个元素，每个元素的 hash 都不同的话，那么这64个数的 hash % n 刚好为0到63能刚好不重复的填满数组。     
+可以看出它是通过 **(n - 1) & hash** 计算出结点在数组中的位置而不是 hash % n（n 即为数组的长度）。hash % n 很好理解，就是通过 hash 得到一个不大于 n 的数作为 index。     
 
 那么 (n - 1) & hash 又是什么意思？其实它和 **hash % n** 等价，不过有一个前提就是 n 为2的幂。这就是为什么数组的长度要根据用户传进来的 capacity 重新计算出一个刚好比它大的2的幂。    
 
-如果容量为2的幂，则 n 为100..0，那么 n - 1 为011..1，那么 hash & (n -1) 会将 hash 的高位修改为0，地位不变，即实现了 h % n 的效果。通过这种方式的效率会比 h % n 的效率高。    
+如果容量为2的幂，则 n 为100..0，那么 n - 1 为011..1，那么 hash & (n -1) 会将 hash 的高位修改为0，低位不变，即实现了 h % n 的效果。通过这种方式的效率会比 h % n 的效率高。    
 
 HashMap 的 bucket 的容量必须为2的幂的另一个原因是它为偶数，那么 n-1 为基数，那么它的最后一位一定为1。 那么 hash & (n-1) 的末位既可能为0，也可能为1，即既可以为奇数，也可能为偶数，但如果不保证 n 为 2 的幂的话，那么当 n - 1 为偶数时，那么 hash & (n -1) 一定为偶数，导致 HashMap 的空间浪费了一半。    
 
